<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detailsFlag"
        android:layout_width="@dimen/flag_image_width"
        android:layout_height="@dimen/flag_image_height"
        android:contentDescription="@string/contentdescr_flag"
        android:scaleType="fitCenter"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <!-- TODO margins from dimen resource -->
    <TextView
        android:id="@+id/detailsCountryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextHeadline"
        app:layout_constraintBottom_toBottomOf="@+id/detailsFlag"
        app:layout_constraintStart_toEndOf="@+id/detailsFlag"
        app:layout_constraintTop_toTopOf="@+id/detailsFlag"
        tools:text="Japan" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsFlag" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/detailsLabelSubregion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_subregion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:textAppearance="@style/TextDetailHeadline"/>

    <TextView
        android:id="@+id/detailsSubregion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/detailsLabelSubregion"
        app:layout_constraintStart_toStartOf="@id/guideline"
        tools:text="Eastern Asia"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/detailsLabelCapitalCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_capital_city"
        app:layout_constraintStart_toStartOf="@id/detailsLabelSubregion"
        app:layout_constraintTop_toBottomOf="@id/detailsLabelSubregion"
        android:textAppearance="@style/TextDetailHeadline"/>

    <TextView
        android:id="@+id/detailsCapitalCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/detailsLabelCapitalCity"
        app:layout_constraintStart_toStartOf="@id/guideline"
        tools:text="Tokyo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/detailsLabelArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_area"
        app:layout_constraintStart_toStartOf="@id/detailsLabelSubregion"
        app:layout_constraintTop_toBottomOf="@id/detailsLabelCapitalCity"
        android:textAppearance="@style/TextDetailHeadline"/>

    <TextView
        android:id="@+id/detailsArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/detailsLabelArea"
        app:layout_constraintStart_toStartOf="@id/guideline"
        tools:text="377930.0"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/detailsLabelPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_population"
        app:layout_constraintStart_toStartOf="@id/detailsLabelSubregion"
        app:layout_constraintTop_toBottomOf="@id/detailsLabelArea"
        android:textAppearance="@style/TextDetailHeadline"/>

    <TextView
        android:id="@+id/detailsPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/detailsLabelPopulation"
        app:layout_constraintStart_toStartOf="@id/guideline"
        tools:text="126960000"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/detailsLabelLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/label_languages"
        app:layout_constraintStart_toStartOf="@id/detailsLabelSubregion"
        app:layout_constraintTop_toBottomOf="@id/detailsLabelPopulation"
        android:textAppearance="@style/TextDetailHeadline"/>

    <TextView
        android:id="@+id/detailsLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/detailsLabelLanguages"
        app:layout_constraintStart_toStartOf="@id/guideline"
        tools:text="Japanese"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

</androidx.constraintlayout.widget.ConstraintLayout>